--- a/php/composer.json
+++ b/php/composer.json
@@ -18,9 +18,7 @@
         "sensio/distribution-bundle": "2.3.*",
         "sensio/framework-extra-bundle": "2.3.*",
         "sensio/generator-bundle": "2.3.*",
-        "incenteev/composer-parameter-handler": "~2.0",
-        "bmatzner/foundation-bundle": "~5.2",
-        "hwi/oauth-bundle": "0.4.*@dev"
+        "incenteev/composer-parameter-handler": "~2.0"
     },
     "scripts": {
         "post-install-cmd": [
